--- a/package.json
+++ b/package.json
@@ -1,26 +1,35 @@
 {
-  "name": "koaApp",
-  "version": "1.0.0",
+  "name": "koa-rendering-react",
+  "version": "0.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/index.js --exec babel-node",
-    "build": "babel src -d dist",
-    "serve": "node dist/index.js"
+    "clean": "rm -rf dist",
+    "watch": "webpack -w",
+    "dev": "nodemon server.js --exec babel-node",
+    "prebuild": "npm run clean",
+    "build": "babel server.js -d dist && babel views -d dist/views",
+    "postbuild": "npm run copy:public",
+    "copy:public": "cp -r public dist",
+    "serve": "node dist/server.js"
   },
   "keywords": [],
   "author": "xwillmadeit <xiesenzhengyi@gmail.com>",
   "license": "MIT",
   "dependencies": {
     "koa": "^2.0.1",
+    "koa-router": "^7.0.1",
+    "koa-static": "^3.0.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
   },
   "devDependencies": {
     "babel-cli": "^6.23.0",
     "babel-core": "^6.23.1",
+    "babel-loader": "^6.3.2",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
-    "nodemon": "^1.11.0"
+    "nodemon": "^1.11.0",
+    "webpack": "^2.2.1"
   }
 }
