--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "main": "index.js",
   "scripts": {
     "clean": "rm -rf dist",
-    "watch": "webpack -w",
     "dev": "nodemon server.js --exec babel-node",
     "prebuild": "npm run clean",
     "build": "babel server.js -d dist && babel views -d dist/views",
@@ -21,14 +20,17 @@
     "koa-router": "^7.0.1",
     "koa-static": "^3.0.0",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "react-redux": "^5.0.3",
+    "redux": "^3.6.0"
   },
   "devDependencies": {
     "babel-cli": "^6.23.0",
     "babel-core": "^6.23.1",
     "babel-loader": "^6.3.2",
-    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-env": "^1.2.1",
     "babel-preset-react": "^6.23.0",
+    "koa-webpack-dev-middleware": "^1.4.4",
     "nodemon": "^1.11.0",
     "webpack": "^2.2.1"
   }
