--- a/package.json
+++ b/package.json
@@ -4,13 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "clean": "rm -rf dist",
-    "dev": "nodemon server.js --exec babel-node",
-    "prebuild": "npm run clean",
-    "build": "babel server.js -d dist && babel views -d dist/views",
-    "postbuild": "npm run copy:public",
-    "copy:public": "cp -r public dist",
-    "serve": "node dist/server.js"
+    "dev": "NODE_ENV=dev nodemon server/index.js --exec babel-node"
   },
   "keywords": [],
   "author": "xwillmadeit <xiesenzhengyi@gmail.com>",
@@ -28,6 +22,7 @@
     "babel-cli": "^6.23.0",
     "babel-core": "^6.23.1",
     "babel-loader": "^6.3.2",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-env": "^1.2.1",
     "babel-preset-react": "^6.23.0",
     "koa-webpack-dev-middleware": "^1.4.4",
