--- a/.eslintrc
+++ b/.eslintrc
@@ -15,6 +15,11 @@
 		"arrow-parens": 1,
 		"class-methods-use-this": 0,
 		"import/prefer-default-export": 1,
-		"no-trailing-spaces": 1
+		"no-trailing-spaces": 0,
+		"react/jsx-first-prop-new-line": 1,
+		"react/jsx-closing-bracket-location": 0,
+		"react/jsx-indent-props": 0,
+		"dot-notation": 0,
+		"react/sort-comp": 0
 	}
 }
