--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "koa": "^2.0.1",
     "koa-bodyparser": "^4.1.0",
     "koa-jwt": "^3.0.0",
+    "koa-logger": "^2.0.1",
     "koa-router": "^7.0.1",
     "koa-static": "^3.0.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.3",
+    "react-router-dom": "^4.0.0-beta.8",
     "redux": "^3.6.0"
   },
   "devDependencies": {
