--- a/.eslintrc
+++ b/.eslintrc
@@ -20,6 +20,8 @@
 		"react/jsx-closing-bracket-location": 0,
 		"react/jsx-indent-props": 0,
 		"dot-notation": 0,
-		"react/sort-comp": 0
+		"react/sort-comp": 0,
+		"react/forbid-prop-types": 0,
+		"jsx-a11y/img-has-alt": 0
 	}
 }
