--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "NODE_ENV=dev nodemon server/server.js --exec babel-node"
+    "dev": "npm run server-dev & npm run webpack-dev",
+    "server-dev": "NODE_ENV=dev nodemon server/index.js --exec babel-node",
+    "webpack-dev": "NODE_ENV=dev babel-node server/webpack.devServer.js"
   },
   "keywords": [],
   "author": "xwillmadeit <xiesenzhengyi@gmail.com>",
@@ -21,7 +23,8 @@
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.3",
     "react-router-dom": "^4.0.0-beta.8",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "webpack-isomorphic-tools": "^3.0.2"
   },
   "devDependencies": {
     "babel-cli": "^6.23.0",
@@ -30,14 +33,18 @@
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-env": "^1.2.1",
     "babel-preset-react": "^6.23.0",
+    "css-loader": "^0.27.3",
     "eslint": "^3.17.1",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-loader": "^1.6.3",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.10.0",
+    "file-loader": "^0.10.1",
     "koa-webpack-dev-middleware": "^1.4.4",
     "nodemon": "^1.11.0",
+    "style-loader": "^0.14.1",
+    "url-loader": "^0.5.8",
     "webpack": "^2.2.1"
   }
 }
