--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,5 @@
 {
+	"parser": "babel-eslint",
 	"extends": "airbnb",
 	"env": {
         "browser": true
@@ -22,6 +23,8 @@
 		"dot-notation": 0,
 		"react/sort-comp": 0,
 		"react/forbid-prop-types": 0,
-		"jsx-a11y/img-has-alt": 0
+		"jsx-a11y/img-has-alt": 0,
+		"import/no-named-as-default-member": 0,
+		"import/no-named-as-default": 0
 	}
 }
