--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "dev": "npm-run-all --parallel server-dev webpack-dev",
     "server-dev": "better-npm-run server-dev",
     "webpack-dev": "better-npm-run webpack-dev",
-    "prebuild:client": "del server/public/build",
+    "prebuild:client": "rm -rf server/public/build",
     "build:client": "better-npm-run build:client",
     "build": "npm-run-all build:client compile",
     "compile": "npm-run-all compile:client compile:server",
@@ -90,7 +90,6 @@
     "copy": "^0.3.0",
     "cross-env": "^3.2.4",
     "css-loader": "^0.27.3",
-    "del-cli": "^0.2.1",
     "eslint": "^3.17.1",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-loader": "^1.6.3",
