--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "react-redux": "^5.0.3",
     "react-router-dom": "^4.0.0-beta.8",
     "redux": "^3.6.0",
+    "serialize-javascript": "^1.3.0",
     "webpack-isomorphic-tools": "^3.0.2"
   },
   "devDependencies": {
