--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "webpack-isomorphic-tools": "^3.0.2"
   },
   "devDependencies": {
+    "autoprefixer": "^6.7.7",
     "babel-cli": "^6.23.0",
     "babel-core": "^6.23.1",
     "babel-eslint": "^7.1.1",
@@ -100,8 +101,11 @@
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.10.1",
     "koa-webpack-dev-middleware": "^1.4.4",
+    "node-sass": "^4.5.0",
     "nodemon": "^1.11.0",
     "npm-run-all": "^4.0.2",
+    "postcss-loader": "^1.3.3",
+    "sass-loader": "^6.0.3",
     "style-loader": "^0.14.1",
     "url-loader": "^0.5.8",
     "webpack": "^2.2.1"
