--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
   "author": "xwillmadeit <xiesenzhengyi@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "npm-run-all --parallel server-dev webpack-dev",
-    "server-dev": "better-npm-run server-dev",
-    "webpack-dev": "better-npm-run webpack-dev",
-    "prebuild:client": "rm -rf server/public/build",
+    "dev": "npm-run-all --parallel server:dev webpack:dev",
+    "dev:client": "better-npm-run client:dev",
+    "server:dev": "better-npm-run server:dev",
+    "webpack:dev": "better-npm-run webpack:dev",
+    "prebuild:client": "rimraf server/public/build",
     "build:client": "better-npm-run build:client",
     "build": "npm-run-all build:client compile",
     "compile": "npm-run-all compile:client compile:server",
@@ -26,8 +27,8 @@
     "compile:server": "babel server -d dist/server --ignore server/public",
     "postcompile:server": "npm run copy:public",
     "postbuild": "npm run copy:config",
-    "copy:public": "babel server/public -d dist/server/public --copy-files",
-    "copy:config": "copy webpack-assets.json dist && copy isomorphic-config.js dist",
+    "copy:public": "ncp server/public dist/server/public",
+    "copy:config": "ncp webpack-assets.json dist/webpack-assets.json && ncp isomorphic-config.js dist/isomorphic-config.js",
     "copy:assets": "npm-run-all --parallel copy:images copy:styles",
     "copy:images": "babel client/images -d dist/client/images --copy-files",
     "copy:styles": "babel client/styles -d dist/client/styles --copy-files",
@@ -40,13 +41,20 @@
         "NODE_ENV": "production"
       }
     },
-    "server-dev": {
+    "server:dev": {
       "command": "cross-env nodemon server/index.js --exec babel-node",
       "env": {
         "NODE_ENV": "development"
       }
     },
-    "webpack-dev": {
+    "client:dev": {
+      "command": "cross-env babel-node server/webpack.devServer.js --client=only",
+      "env": {
+        "NODE_ENV": "development",
+        "BABEL_ENV": "client"
+      }
+    },
+    "webpack:dev": {
       "command": "cross-env babel-node server/webpack.devServer.js",
       "env": {
         "NODE_ENV": "development"
@@ -71,6 +79,7 @@
     "koa-static": "^3.0.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-hot-loader": "^3.0.0-beta.6",
     "react-redux": "^5.0.3",
     "react-router-dom": "^4.0.0-beta.8",
     "redux": "^3.6.0",
@@ -82,14 +91,13 @@
     "babel-cli": "^6.23.0",
     "babel-core": "^6.23.1",
     "babel-eslint": "^7.1.1",
-    "babel-loader": "^6.3.2",
+    "babel-loader": "^6.4.1",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-transform-class-properties": "^6.23.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-env": "^1.2.1",
     "babel-preset-react": "^6.23.0",
     "better-npm-run": "0.0.14",
-    "copy": "^0.3.0",
     "cross-env": "^3.2.4",
     "css-loader": "^0.27.3",
     "eslint": "^3.17.1",
@@ -100,11 +108,16 @@
     "eslint-plugin-react": "^6.10.0",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.10.1",
-    "koa-webpack-dev-middleware": "^1.4.4",
+    "html-webpack-plugin": "^2.28.0",
+    "koa-webpack": "^0.3.1",
+    "minimist": "^1.2.0",
+    "ncp": "^2.0.0",
     "node-sass": "^4.5.0",
     "nodemon": "^1.11.0",
     "npm-run-all": "^4.0.2",
     "postcss-loader": "^1.3.3",
+    "react-hot-loader": "^3.0.0-beta.6",
+    "rimraf": "^2.6.1",
     "sass-loader": "^6.0.3",
     "style-loader": "^0.14.1",
     "url-loader": "^0.5.8",
