--- a/.eslintrc
+++ b/.eslintrc
@@ -25,6 +25,7 @@
 		"react/forbid-prop-types": 0,
 		"jsx-a11y/img-has-alt": 0,
 		"import/no-named-as-default-member": 0,
-		"import/no-named-as-default": 0
+		"import/no-named-as-default": 0,
+		"no-debugger": 1
 	}
 }
