--- a/.babelrc
+++ b/.babelrc
@@ -7,8 +7,7 @@
 			],
 			"plugins": [
 				"transform-object-rest-spread",
-				"transform-class-properties",
-				"react-hot-loader/babel"
+				"transform-class-properties"
 			]
 		},
 		"development": {
@@ -19,8 +18,7 @@
 			"plugins": [
 				"transform-object-rest-spread",
 				"transform-class-properties",
-				"add-module-exports",
-				"react-hot-loader/babel"
+				"add-module-exports"
 			]
 		},
 		"production": {
@@ -31,8 +29,7 @@
 			"plugins": [
 				"transform-object-rest-spread",
 				"transform-class-properties",
-				"add-module-exports",
-				"react-hot-loader/babel"
+				"add-module-exports"
 			]
 		}
 	}
