--- a/.eslintrc
+++ b/.eslintrc
@@ -5,24 +5,25 @@
   	"browser": true
   },
 	"rules": {
-		"semi": 0,
-		"react/jsx-filename-extension": [1, { "extensions": [".js"] }],
-		"react/jsx-indent": 0,
-		"comma-dangle": 0,
-		"arrow-body-style": 0,
-		"arrow-parens": 1,
-		"class-methods-use-this": 0,
-		"import/prefer-default-export": 1,
-		"no-trailing-spaces": 0,
-		"react/jsx-first-prop-new-line": 1,
-		"react/jsx-closing-bracket-location": 0,
-		"react/jsx-indent-props": 0,
-		"dot-notation": 0,
-		"react/sort-comp": 0,
-		"react/forbid-prop-types": 0,
-		"jsx-a11y/img-has-alt": 0,
-		"import/no-named-as-default-member": 0,
-		"import/no-named-as-default": 0,
-		"no-debugger": 1
+    "semi": 0,
+    "react/jsx-filename-extension": [1, { "extensions": [".js"] }],
+    "react/jsx-indent": 0,
+    "comma-dangle": 0,
+    "arrow-body-style": 0,
+    "arrow-parens": ["error", "as-needed"],
+    "class-methods-use-this": 0,
+    "import/prefer-default-export": 0,
+    "no-trailing-spaces": 0,
+    "react/jsx-first-prop-new-line": 1,
+    "react/jsx-closing-bracket-location": 0,
+    "react/jsx-indent-props": 0,
+    "dot-notation": 0,
+    "react/sort-comp": 0,
+    "react/forbid-prop-types": 0,
+    "jsx-a11y/img-has-alt": 0,
+    "import/no-named-as-default-member": 0,
+    "import/no-named-as-default": 0,
+    "no-debugger": 1,
+    "no-multiple-empty-lines": ["error", { "max": 2, "maxEOF": 1 }]
 	}
 }
