--- a/.babelrc
+++ b/.babelrc
@@ -7,7 +7,9 @@
 			],
 			"plugins": [
 				"transform-object-rest-spread",
-				"transform-class-properties"
+				"transform-class-properties",
+        ["import", { "libraryName": "antd", "style": "css" }],
+        "react-hot-loader/babel"
 			]
 		},
 		"development": {
