--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     }
   },
   "dependencies": {
+    "antd": "^2.8.3",
     "axios": "^0.15.3",
     "babel-polyfill": "^6.23.0",
     "koa": "^2.0.1",
@@ -93,6 +94,7 @@
     "babel-eslint": "^7.1.1",
     "babel-loader": "^6.4.1",
     "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-import": "^1.1.1",
     "babel-plugin-transform-class-properties": "^6.23.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-env": "^1.2.1",
