--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
   "author": "xwillmadeit <xiesenzhengyi@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "npm-run-all --parallel dev:server dev:webpack",
-    "dev:client": "better-npm-run client:dev",
+    "dev": "npm-run-all --parallel dev:server dev:webpackServer",
+    "dev:client": "better-npm-run dev:client",
     "dev:server": "better-npm-run dev:server",
-    "dev:webpack": "better-npm-run dev:webpack",
+    "dev:webpackServer": "better-npm-run dev:webpackServer",
     "prebuild:client": "rimraf server/public/build",
     "build:client": "better-npm-run build:client",
     "build": "npm-run-all build:client compile",
@@ -38,32 +38,37 @@
     "start": {
       "command": "cross-env node dist/server/index.js",
       "env": {
-        "NODE_ENV": "production"
+        "NODE_ENV": "production",
+        "PORT": 4000
       }
     },
-    "client:dev": {
+    "dev:client": {
       "command": "cross-env babel-node server/webpack.devServer.js --client=only",
       "env": {
         "NODE_ENV": "development",
-        "BABEL_ENV": "client"
+        "BABEL_ENV": "client",
+        "PORT": 4001
       }
     },
     "dev:server": {
       "command": "cross-env nodemon server/index.js --exec babel-node",
       "env": {
-        "NODE_ENV": "development"
+        "NODE_ENV": "development",
+        "PORT": 4000
       }
     },
-    "dev:webpack": {
+    "dev:webpackServer": {
       "command": "cross-env babel-node server/webpack.devServer.js",
       "env": {
-        "NODE_ENV": "development"
+        "NODE_ENV": "development",
+        "PORT": 4001
       }
     },
     "build:client": {
       "command": "cross-env webpack -p",
       "env": {
-        "NODE_ENV": "production"
+        "NODE_ENV": "production",
+        "PORT": 4000
       }
     }
   },
