--- a/package.json
+++ b/package.json
@@ -19,19 +19,15 @@
     "dev:server": "better-npm-run dev:server",
     "dev:webpackServer": "better-npm-run dev:webpackServer",
     "prebuild:client": "rimraf server/public/build",
-    "build:client": "better-npm-run build:client",
     "build": "npm-run-all build:client compile",
-    "compile": "npm-run-all compile:client compile:server",
-    "compile:client": "babel client -d dist/client --ignore client/images client/styles",
-    "postcompile:client": "npm run copy:assets",
-    "compile:server": "babel server -d dist/server --ignore server/public",
+    "build:client": "better-npm-run build:client",
+    "compile": "npm-run-all --parallel compile:client compile:server",
+    "compile:client": "babel client -d dist/client --copy-files",
+    "compile:server": "babel server -d dist/server",
     "postcompile:server": "npm run copy:public",
     "postbuild": "npm run copy:config",
     "copy:public": "ncp server/public dist/server/public",
-    "copy:config": "ncp webpack-assets.json dist/webpack-assets.json && ncp isomorphic-config.js dist/isomorphic-config.js",
-    "copy:assets": "npm-run-all --parallel copy:images copy:styles",
-    "copy:images": "babel client/images -d dist/client/images --copy-files",
-    "copy:styles": "babel client/styles -d dist/client/styles --copy-files",
+    "copy:config": "babel config -d dist/config && ncp webpack-assets.json dist/webpack-assets.json && ncp isomorphic-config.js dist/isomorphic-config.js",
     "start": "better-npm-run start"
   },
   "betterScripts": {
