--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "postbuild": "npm run copy:config",
     "copy:public": "ncp server/public dist/server/public",
     "copy:config": "babel config -d dist/config && ncp webpack-assets.json dist/webpack-assets.json && ncp isomorphic-config.js dist/isomorphic-config.js",
-    "start": "better-npm-run start"
+    "start": "better-npm-run start",
+    "lint": "eslint server/**"
   },
   "betterScripts": {
     "start": {
@@ -72,6 +73,7 @@
     "antd": "^2.8.3",
     "axios": "^0.15.3",
     "babel-polyfill": "^6.23.0",
+    "jsonwebtoken": "^7.3.0",
     "koa": "^2.0.1",
     "koa-bodyparser": "^4.1.0",
     "koa-favicon": "^2.0.0",
@@ -86,10 +88,10 @@
     "react-router-dom": "^4.0.0-beta.8",
     "redux": "^3.6.0",
     "serialize-javascript": "^1.3.0",
-    "autoprefixer": "^6.7.7",
     "webpack-isomorphic-tools": "^3.0.2"
   },
   "devDependencies": {
+    "autoprefixer": "^6.7.7",
     "babel-cli": "^6.23.0",
     "babel-core": "^6.23.1",
     "babel-eslint": "^7.1.1",
@@ -114,6 +116,7 @@
     "html-webpack-plugin": "^2.28.0",
     "koa-webpack": "^0.3.1",
     "minimist": "^1.2.0",
+    "mockjs": "^1.0.1-beta3",
     "ncp": "^2.0.0",
     "node-sass": "^4.5.0",
     "nodemon": "^1.11.0",
